--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         padding: 0px;
         background-color: #fcfdf4
     }</style>
-</head>symbolic
+</head>
 <body>
 <noscript>This website requires Javascript to be enabled. Please turn on Javascript<br/>and reload the page.</noscript>
 <div id="psite">Loading</div>
