--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>PSITE</title>
     <script type="text/javascript" src="psite.js?conf=./conf.properties"></script>
-    <style type="text/css">body {
-        margin: 0px;
-        padding: 0px;
-        background-color: #fcfdf4
-    }</style>
+    <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
+<h1>psite.js Example</h1>
 <noscript>This website requires Javascript to be enabled. Please turn on Javascript<br/>and reload the page.</noscript>
 <div id="psite">Loading</div>
 </body>
