--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
     <title>PSITE</title>
-    <script type="text/javascript" src="psite.js?conf=./conf.properties"></script>
     <link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 <h1>psite.js Example</h1>
 <noscript>This website requires Javascript to be enabled. Please turn on Javascript<br/>and reload the page.</noscript>
-<div id="psite">Loading</div>
+<script type="text/javascript" src="psite.js?conf=./conf.properties&max-height=128"></script>
 </body>
 </html>
