--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <h1>psite.js Example</h1>
 <noscript>This website requires Javascript to be enabled. Please turn on Javascript<br/>and reload the page.</noscript>
+<div id="psite">Loading</div>
 <script type="text/javascript" src="psite.js?conf=./conf.properties&max-height=128"></script>
 </body>
 </html>
